slurm-837680.out
  File "Entropy_Complexity_length.py", line 5
    %matplotlib inline
    ^
SyntaxError: invalid syntax
